# mac_mem_map

./: CMakeLists.txt  Makefile  main.cpp
include/mac_memory_mapping/: base_file_mmapper.hpp  base_file_mmapper_ext.hpp  file_descriptor_guard.hpp  mmap_private.hpp  mmap_private_ext.hpp  mmap_reader.hpp  mmap_reader_ext.hpp  mmap_rwriter.hpp  mmap_rwriter_ext.hpp  mmap_writer.hpp  mmap_writer_ext.hpp  types.hpp  utils.hpp
internal_include/: example.hpp
src/: base_file_mmapper.cpp  base_file_mmapper_ext.cpp  example.cpp  file_descriptor_guard.cpp  mmap_private.cpp  mmap_private_ext.cpp  mmap_reader.cpp  mmap_reader_ext.cpp  mmap_rwriter.cpp  mmap_rwriter_ext.cpp  mmap_writer.cpp  mmap_writer_ext.cpp  utils.cpp
